--- a/sobre/equipo/team.qmd
+++ b/sobre/equipo/team.qmd
@@ -39,7 +39,7 @@ organizers_list <- team_raw[[3]] |>
 
 ## About us
 
-On October 25, 2017, an announcement was made by Heather Turner on the R User Group (RUG) Organizers Slack: the R Foundation Conference Committee was interested in the emergence of academic-focused R events in regions not currently covered by useR! In less than a week, we had organized our first videoconference to start thinking about how to face the challenge. This quick response was not the result of mere luck, but the consequence of a year in which the R community — through its local RUGs and social media presence— grew stronger in South America. By mid November everything was set up: a name, a place, a date, and a motivated international organizing committee. The first edition took place in Buenos Aires, Argentina and the second in Santiago de Chile, Chile. This year, the latinamerican R community will meet up in Montevideo, Uruguay.
+On October 25, 2017, an announcement was made by Heather Turner on the R User Group (RUG) Organizers Slack: the R Foundation Conference Committee was interested in the emergence of academic-focused R events in regions not currently covered by useR! In less than a week, we had organized our first videoconference to start thinking about how to face the challenge. This quick response was not the result of mere luck, but the consequence of a year in which the R community — through its local RUGs and social media presence— grew stronger in South America. By mid November everything was set up: a name, a place, a date, and a motivated international organizing committee. The first edition took place in Buenos Aires, Argentina and the second in Santiago de Chile, Chile. After the virtual editions between 2020 and 2022, this year the latinamerican R community will meet up in Montevideo, Uruguay.
 
 ### LatinR Chairs
 
