--- a/sobre/equipo/equipe.qmd
+++ b/sobre/equipo/equipe.qmd
@@ -39,7 +39,7 @@ organizers_list <- team_raw[[3]] |>
 
 ## Sobre nós
 
-Em 25 de outubro de 2017, Heather Turner fez um anúncio no Slack R User Group (RUG) Organizers: o Comitê da Conferência da R Foundation estava interessada na ascensão de eventos sobre R focado na academia nas regiões não cobertas pelo useR! Em menos de uma semana, nós organizamos nossa primeira video conferência para começar a pensar como lidar com este desafio. Esta resposta rápida não foi um resultado de mera sorte, mas a consequência de um ano no qual a comunidada R através de seus RUGs locais e presença em mídias sociais se fortaleceu na América do Sul. Até meados de novembro tudo estava preparado: um nome, um local, uma data e um comitê organizacional internacional motivado. A primeira edição foi em Buenos Aires, Argentina e a segunda em Santiago de Chile, Chile. Este ano, a comunidade R da América Latina se reunirá em Montevideo, Uruguai.
+Em 25 de outubro de 2017, Heather Turner fez um anúncio no Slack R User Group (RUG) Organizers: o Comitê da Conferência da R Foundation estava interessada na ascensão de eventos sobre R focado na academia nas regiões não cobertas pelo useR! Em menos de uma semana, nós organizamos nossa primeira video conferência para começar a pensar como lidar com este desafio. Esta resposta rápida não foi um resultado de mera sorte, mas a consequência de um ano no qual a comunidada R através de seus RUGs locais e presença em mídias sociais se fortaleceu na América do Sul. Até meados de novembro tudo estava preparado: um nome, um local, uma data e um comitê organizacional internacional motivado. A primeira edição foi em Buenos Aires, Argentina e a segunda em Santiago de Chile, Chile. Após as edições virtuais entre 2020 e 2022, este ano a comunidade R na América Latina se reunirá em Montevideo, Uruguai.
 
 ### Presidentes LatinR
 
