--- a/cronograma/tutoriales/workshops-pt.qmd
+++ b/cronograma/tutoriales/workshops-pt.qmd
@@ -82,9 +82,20 @@ contributors, including myself.
 
 **Data e horário:** 18/10 - 13:30-17:00
 
-**Language:** English
+**Idioma:** English
 
-**Descrição:** Em breve
+**Descrição:** 
+
+- Review of making effective plots using ggplot2's grammar of graphics:
+    - Organising your data to enable mapping variables to graphical elements, 
+    - Common plot descriptions as scripts,
+    - Do's and don'ts following cognitive perception principles.
+- Making decisions and inferential statements based on data plots
+    - What is your plot testing? Determining the hypothesis based on the type of plot.
+    - Creating null samples to build lineups for comparison and testing.
+    - Conducting a lineup test using your friends to determine whether what you see is real or spurious, and to determine the best design for your plot.
+
+**Background:** Participants should have a good working knowledge of R, and tidyverse, and some experience with ggplot2. Familiarity with the material in R4DS (<https://r4ds.hadley.nz>) is helpful.
 
 ## Creación de reportes reproducibles con Quarto
 
