--- a/index.qmd
+++ b/index.qmd
@@ -38,6 +38,8 @@ page-layout: custom
 
 ## 18 al 20 de octubre de 2023 - Montevideo, Uruguay 
 
+<center> {{< fa location-dot >}} Facultad de Ciencias Económicas y de Administración, UDELAR</center>
+<br>
 </section>
 
 
@@ -76,6 +78,8 @@ generar_cards_keynotes(info_keynotes, col_info = "", width_col = "20%")
 
 ## October 18-20, 2023 - Montevideo, Uruguay 
 
+<center> {{< fa location-dot >}} Facultad de Ciencias Económicas y de Administración, UDELAR</center>
+<br>
 </section>
 
 
@@ -108,6 +112,8 @@ generar_cards_keynotes(info_keynotes, col_info = "", width_col = "20%")
 
 ## 18 a 20 de outubro de 2023 - Montevideo, Uruguay
 
+<center> {{< fa location-dot >}} Facultad de Ciencias Económicas y de Administración, UDELAR</center>
+<br>
 </section>
 
 
