--- a/blog/es/2023-08-18-becas-2023.md
+++ b/blog/es/2023-08-18-becas-2023.md
@@ -1,10 +1,8 @@
 ---
 layout: post
 title:  "Becas de asistencia"
-isStaticPost: false
 lang: es
 date: 2023-08-18
-ref: keynotes-2023
 ---
 
 ### ¡Postula a las becas de asistencia para LatinR 2023!
@@ -17,7 +15,7 @@ Gracias al apoyo de nuestros patrocinadores este año podremos ofrecer becas de 
 
 Además, dependiendo del caso, entregaremos un aporte económico de entre 100 y 300 dólares para traslado y/o alojamiento para personas que vienen desde fuera de Montevideo. Sabemos que ese monto en muchos casos no alcanza para cubrir la totalidad del viaje, pero puede ayudar a amortiguar el gasto.
 
-La postulación estará abierta hasta el domingo 27 de agosto a las 23:59 horas (UTC - 4:00) y puede realizarse a través de [este formulario](https://forms.gle/eCvW3wG3fK1z7g1KA). Los resultados se publicarán a principios de septiembre.
+La postulación estará abierta hasta el domingo 27 de agosto a las 23:59 horas (UTC - 4:00) y puede realizarse a través de **[este formulario](https://forms.gle/eCvW3wG3fK1z7g1KA)**. Los resultados se publicarán a principios de septiembre.
 
 Las becas serán asignadas considerando criterios de necesidad, diversidad y posibilidad de impacto.
 
