--- a/blog/pt/2023-08-18-bolsas-2023.md
+++ b/blog/pt/2023-08-18-bolsas-2023.md
@@ -5,10 +5,10 @@ lang: pt
 date: 2023-08-18
 ---
 
-### Candidate-se às bolsas de auxílio para o LatinR 2023!
+### Candidate-se às bolsas de auxílio para a LatinR 2023!
 
 <br>
-Graças ao apoio de nossos patrocinadores, este ano poderemos oferecer bolsas de auxílio que incluem:
+Graças ao apoio de nossos patrocinadores, este ano poderemos oferecer bolsas que incluem:
 
 - a entrada na conferência para os dias 19 e 20 de outubro
 
