--- a/cronograma/recursos-turisticos/index.qmd
+++ b/cronograma/recursos-turisticos/index.qmd
@@ -10,7 +10,7 @@ knitr:
 
 Bienvenido a Montevideo, la vibrante capital de Uruguay y ciudad anfitriona de Latin-R 2023. Esta guía es para usted, ya sea un participante de la conferencia que desea aprovechar al máximo su tiempo aquí o un local con ganas de redescubrir su ciudad junto a nuestros invitados internacionales. Hemos confeccionado una lista de lugares esenciales para visitar y cosas que hacer en varias categorías: desde restaurantes y entretenimiento hasta lugares de interés cultural y alojamiento. Piense en esto como su recurso para encontrar enlaces útiles y actividades que enriquecerán su experiencia Latin-R 2023 en Montevideo. Sumerjámonos en el mundo de oportunidades que le esperan.
 
-También puedes encontrar más información en: https://www.descubrimontevideo.uy/
+También puedes encontrar más información en: <https://www.descubrimontevideo.uy/>
 
 ## Transporte en Montevideo
 
