Corrección redacción y estilos markdown español

--- a/cronograma/recursos-turisticos/index-es.qmd
+++ b/cronograma/recursos-turisticos/index-es.qmd
@@ -44,11 +44,11 @@ Montevideo tiene una amplia red de servicios de transporte en cada rincón, el b
 
 ### Sabores locales
 - **El Tacho**: Disfrute de una buenza pizza al tacho en [El Tacho](https://maps.app.goo.gl/j4LVKLUYB1fn6x9RA).
-- Chivitos**: Disfruta del mejor chivito en un lugar diferente. [Ubicación](https://maps.app.goo.gl/rjiPCefxeJeAv3kZ8)
+- **Chivitos**: Disfruta del mejor chivito en un lugar diferente. [Ubicación](https://maps.app.goo.gl/rjiPCefxeJeAv3kZ8)
 
 ### Mercado del Puerto y Alrededores
-- **Mercado del Puerto**: Un mercado turístico pero divertido. 
-- **Museo del Carnaval**: Conoce las tradiciones locales del Carnaval uruguayo.
+- **Mercado del Puerto**: Un mercado turístico y divertido. 
+- **Museo del Carnaval**: Conozca las tradiciones locales del Carnaval uruguayo.
 - **Opciones gastronómicas locales**: Visite [este lugar](https://maps.app.goo.gl/8xYxGRUkGd84i4VAA) para conocer la comida local.
 - **Buena comida**: Si el presupuesto no es un problema, visite [este famoso lugar](https://maps.app.goo.gl/WNTR8R5hQKSW6aMk8).
 
@@ -69,9 +69,9 @@ Montevideo tiene una amplia red de servicios de transporte en cada rincón, el b
 
 ## Atracciones futbolísticas
 
-- Estadio Centenario**: Incluye un Museo del Fútbol.
-- Parque Central**: Ofrece un museo en el Salón de Cristal.
-- Chorolo al Paso**: Comida rápida disponible en [este lugar](https://maps.app.goo.gl/KKS2xkcWZgrr85u39).
+- **Estadio Centenario**: Incluye un Museo del Fútbol.
+- **Parque Central**: Ofrece un museo en el Salón de Cristal.
+- **Chorolo al Paso**: Comida rápida disponible en [este lugar](https://maps.app.goo.gl/KKS2xkcWZgrr85u39).
 
 ---
 
